k8s/home/cluster-apps/namespace/media/jellyfin/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: jellyfin
  name: jellyfin
  namespace: media
spec:
  replicas: 1
  selector:
    matchLabels:
      app: jellyfin
  strategy: {}
  template:
    metadata:
      labels:
        app: jellyfin
    spec:
      containers:
      - image: jellyfin/jellyfin
        name: jellyfin
        imagePullPolicy: Always
        volumeMounts:
          - mountPath: /media
            name: media
            readOnly: true
          - mountPath: /config
            name: config
        resources:
          requests:
            memory: "1Gi"
            cpu: "1"
          limits:
            memory: "8Gi"
            cpu: 4
        livenessProbe:
          httpGet:
            path: /System/info/public
            port: 8096
          periodSeconds: 5
          initialDelaySeconds: 5
        startupProbe:
          httpGet:
            path: /System/info/public
            port: 8096
          periodSeconds: 5
          initialDelaySeconds: 15
          failureThreshold: 10
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: jellyfin-config
        - name: media
          nfs:
            server: 10.10.0.8
            path: /tank/nas/library
